ut_sources = [
  'ut-base64.c',
  'ut-boolean.c',
  'ut-cancel.c',
  'ut-constant-utf8-string.c',
  'ut-constant-uint8-array.c',
  'ut-end-of-stream.c',
  'ut-event-loop.c',
  'ut-error.c',
  'ut-fd-input-stream.c',
  'ut-fd-output-stream.c',
  'ut-file.c',
  'ut-float64.c',
  'ut-general-error.c',
  'ut-hash-table.c',
  'ut-http-client.c',
  'ut-http-header.c',
  'ut-http-response.c',
  'ut-input-stream.c',
  'ut-int64.c',
  'ut-json.c',
  'ut-list.c',
  'ut-local-file.c',
  'ut-map.c',
  'ut-map-item.c',
  'ut-null.c',
  'ut-object.c',
  'ut-object-array.c',
  'ut-object-list.c',
  'ut-output-stream.c',
  'ut-string.c',
  'ut-string-array.c',
  'ut-tcp-client.c',
  'ut-uint8.c',
  'ut-uint8-array.c',
  'ut-uint8-list.c',
  'ut-uint16.c',
  'ut-uint16-array.c',
  'ut-uint16-list.c',
  'ut-uint32.c',
  'ut-uint32-list.c',
  'ut-uint32-array.c',
  'ut-uint64.c',
  'ut-unix-domain-socket-client.c',
  'ut-utf8-decoder.c',
  'ut-utf8-encoder.c',
  'ut-utf8-string.c',
  'ut-xml-document.c',
  'ut-xml-element.c'
]

executable('ut-base64-test',
           'ut-base64-test.c',
           ut_sources)

executable('ut-constant-utf8-string-test',
           'ut-constant-utf8-string-test.c',
           ut_sources)

executable('ut-event-loop-test',
           'ut-event-loop-test.c',
           ut_sources)

executable('ut-json-test',
           'ut-json-test.c',
           ut_sources)

executable('ut-local-file-test',
           'ut-local-file-test.c',
           ut_sources)

executable('ut-http-client-test',
           'ut-http-client-test.c',
           ut_sources)

executable('ut-map-test',
           'ut-map-test.c',
           ut_sources)

executable('ut-tcp-client-test',
           'ut-tcp-client-test.c',
           ut_sources)

executable('ut-uint8-array-test',
           'ut-uint8-array-test.c',
           ut_sources)

executable('ut-unix-domain-socket-client-test',
           'ut-unix-domain-socket-client-test.c',
           ut_sources)

executable('ut-utf8-decoder-test',
           'ut-utf8-decoder-test.c',
           ut_sources)

executable('ut-utf8-encoder-test',
           'ut-utf8-encoder-test.c',
           ut_sources)

executable('ut-utf8-string-test',
           'ut-utf8-string-test.c',
           ut_sources)

executable('ut-xml-document-test',
           'ut-xml-document-test.c',
           ut_sources)
